Fix right padding bug on mobile device.

--- a/styles/sass/home_page.sass
+++ b/styles/sass/home_page.sass
@@ -104,11 +104,6 @@ $company_background_mobile: url(../../img/home_company_mobile.png)
     .why-crystalnix
         background: #FD5412
         color: white
-        .container
-            text-align: center
-            @media (min-width: $screen-sm-min)
-                text-align: left
-                padding-bottom: 25px
         span
             display: block
             padding-bottom: 50px
@@ -116,6 +111,11 @@ $company_background_mobile: url(../../img/home_company_mobile.png)
                 display: inline
             @media (min-width: $screen-sm-min)
                 padding-bottom: 65px
+        .why-crystalnix__content
+            text-align: center
+            @media (min-width: $screen-sm-min)
+                text-align: left
+                padding-bottom: 25px
         .why-crystalnix_content-header
             font-family: Montserrat-Hairline
             font-size: 20px
@@ -123,6 +123,7 @@ $company_background_mobile: url(../../img/home_company_mobile.png)
             letter-spacing: 0.83px
             padding-top: 17px
             padding-bottom: 17px
+            margin-right: -20px
             @media (min-width: $screen-sm-min)
                 font-size: 24px
                 letter-spacing: 1px
